--- a/RasterTek/RasterTek.vcxproj.filters
+++ b/RasterTek/RasterTek.vcxproj.filters
@@ -93,9 +93,6 @@
     <ClCompile Include="Timer.cpp">
       <Filter>Source Files\Timing</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject.cpp">
-      <Filter>Source Files\GameObjStructure</Filter>
-    </ClCompile>
     <ClCompile Include="CBufferNotFoundException.cpp">
       <Filter>Source Files\Exception</Filter>
     </ClCompile>
@@ -108,16 +105,25 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SphereObject.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="FloorObject.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="RenderTargetTexture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FullScreenQuadObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Light.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DirectionalLight.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Objects\GameObject.cpp">
+      <Filter>Source Files\GameObjStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="Objects\FloorObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Objects\SphereObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -145,9 +151,6 @@
     </ClInclude>
     <ClInclude Include="Timer.h">
       <Filter>Header Files\Timing</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject.h">
-      <Filter>Header Files\GameObjStucture</Filter>
     </ClInclude>
     <ClInclude Include="Geometry.h">
       <Filter>Header Files\GameObjStucture\Geometries</Filter>
@@ -182,12 +185,6 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SphereObject.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="FloorObject.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="RenderTargetTexture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -196,6 +193,21 @@
     </ClInclude>
     <ClInclude Include="FullScreenQuadGeometry.h">
       <Filter>Header Files\GameObjStucture\Geometries</Filter>
+    </ClInclude>
+    <ClInclude Include="Light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DirectionalLight.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects\FloorObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects\GameObject.h">
+      <Filter>Header Files\GameObjStucture</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects\SphereObject.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -219,6 +231,8 @@
     <FxCompile Include="Shaders\PN-Triangles\vs.hlsl">
       <Filter>Shaders\PN-Triangles</Filter>
     </FxCompile>
+    <FxCompile Include="Shaders\ShadowMap-Directional\vs.hlsl" />
+    <FxCompile Include="Shaders\ShadowMap-Directional\ps.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -235,5 +249,6 @@
     <None Include="Shaders\Phong-Blinn\vs_ps_transfer.hlsli">
       <Filter>Shaders\Phong-Blinn</Filter>
     </None>
+    <None Include="Shaders\ShadowMap-Directional\vs_ps_transfer.hlsli" />
   </ItemGroup>
 </Project>
