--- a/RasterTek/RasterTek.vcxproj.filters
+++ b/RasterTek/RasterTek.vcxproj.filters
@@ -123,7 +123,7 @@
     <ClCompile Include="Objects\FloorObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Objects\SphereObject.cpp">
+    <ClCompile Include="Objects\BallObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -206,8 +206,11 @@
     <ClInclude Include="Objects\GameObject.h">
       <Filter>Header Files\GameObjStucture</Filter>
     </ClInclude>
-    <ClInclude Include="Objects\SphereObject.h">
+    <ClInclude Include="Objects\BallObject.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AssimpMultiModel.h">
+      <Filter>Header Files\GameObjStucture\Geometries</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
